doc: hotfix decument class

--- a/rapport/tp2rapport.tex
+++ b/rapport/tp2rapport.tex
@@ -1,4 +1,5 @@
-\documentclass[12pt, a4paper, oneside]{article}
+\documentclass[12pt, a4paper, oneside]{thesis}
+\usepackage{tgheros}
 \usepackage[utf8]{inputenc}
 \usepackage{kpfonts}
 \usepackage[T1]{fontenc}
